WeatherIcons: add weather color icons support
* Source: https://www.iconfinder.com/iconsets/weather-color-2

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -443,6 +443,35 @@
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-tornado.png" />
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-umbrella.png" />
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-wind.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-clouds.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-cloud_windy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_clouds_windy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_cloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_sun.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-day_thunder.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-hail.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moonrise.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moonset.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_clouds_windy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_cloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-moon_thunderstorm.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-sandstorm.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-showers.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-storm_hurricane_tornado.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-sunset.png" />
+    <Content Include="Assets\WeatherIcons\dark\wci-sl-if-thunderstorm.png" />
     <Content Include="Assets\WeatherIcons\dark\wic-barometer.png" />
     <Content Include="Assets\WeatherIcons\dark\wic-celsius.png" />
     <Content Include="Assets\WeatherIcons\dark\wic-cloud-fog.png" />
@@ -603,6 +632,35 @@
     <Content Include="Assets\WeatherIcons\light\pe-is-w-tornado.png" />
     <Content Include="Assets\WeatherIcons\light\pe-is-w-umbrella.png" />
     <Content Include="Assets\WeatherIcons\light\pe-is-w-wind.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-clouds.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-cloud_windy.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_clouds_windy.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_cloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_sun.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-day_thunder.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-hail.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moonrise.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moonset.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_clouds_windy.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_cloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-moon_thunderstorm.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-sandstorm.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-showers.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-storm_hurricane_tornado.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-sunset.png" />
+    <Content Include="Assets\WeatherIcons\light\wci-sl-if-thunderstorm.png" />
     <Content Include="Assets\WeatherIcons\light\wi-barometer.png" />
     <Content Include="Assets\WeatherIcons\light\wi-celsius.png" />
     <Content Include="Assets\WeatherIcons\light\wi-cloud.png" />
