Credits: add WeatherUnlocked to list

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -346,6 +346,7 @@
     <Content Include="Assets\Providers\nws.png" />
     <Content Include="Assets\Providers\openweathermap.png" />
     <Content Include="Assets\Providers\waqi.png" />
+    <Content Include="Assets\Providers\wunlocked.png" />
     <Content Include="Assets\Providers\yahoo.png" />
     <Content Include="Assets\Providers\yahoo_dark.png" />
     <Content Include="Assets\WeatherIcons\dark\mc-clear-day.png" />
