--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -251,15 +251,15 @@
     <Compile Include="Preferences\Settings_Features.xaml.cs">
       <DependentUpon>Settings_Features.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Radar\EarthWindMapViewProvider.cs" />
+    <Compile Include="Radar\NullSchool\EarthWindMapViewProvider.cs" />
     <Compile Include="Radar\MapTileRadarViewProvider.cs" />
-    <Compile Include="Radar\OWMRadarViewProvider.cs" />
+    <Compile Include="Radar\OpenWeather\OWMRadarViewProvider.cs" />
     <Compile Include="Radar\RadarProvider.cs" />
     <Compile Include="Radar\RadarToolbar.xaml.cs">
       <DependentUpon>RadarToolbar.xaml</DependentUpon>
     </Compile>
     <Compile Include="Radar\RadarViewProvider.cs" />
-    <Compile Include="Radar\RainViewerViewProvider.cs" />
+    <Compile Include="Radar\RainViewer\RainViewerViewProvider.cs" />
     <Compile Include="Tiles\SecondaryTileUtils.cs" />
     <Compile Include="Helpers\StringBooleanConverter.cs" />
     <Compile Include="Helpers\IPageVerification.cs" />
