Weather: add supplemental UVI data from AQICN forecast
* Add method in provider impl to provide additional provider-specific updates to weather data (usually just tz offset updates)

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -120,6 +120,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AQICN\AQICNData.cs" />
     <Compile Include="AQICN\AQICNProvider.cs" />
     <Compile Include="AQICN\Rootobject.cs" />
     <Compile Include="Bing\AutoCompleteQuery.cs" />
