--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -294,6 +294,9 @@
     <PackageReference Include="Google.Apis.Firestore.v1">
       <Version>1.49.0.2122</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>4.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>4.1.0</Version>
     </PackageReference>
