--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -166,6 +166,7 @@
     <Compile Include="BackgroundTasks\RemoteConfigUpdateTask.cs" />
     <Compile Include="BackgroundTasks\ImageDatabaseTask.cs" />
     <Compile Include="BackgroundTasks\UpdateTask.cs" />
+    <Compile Include="BackgroundTasks\WeatherTileUpdaterTask.cs" />
     <Compile Include="BackgroundTasks\WNSPushBackgroundTask.cs" />
     <Compile Include="Controls\BottomNavigationBarItem.cs" />
     <Compile Include="Controls\BottomNavigationBar.cs" />
