--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>SimpleWeather.Shared</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18362.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -233,7 +233,8 @@
     <Compile Include="Utils\SimpleObservableList.cs" />
     <Compile Include="Utils\StringExtensions.cs" />
     <Compile Include="Utils\StringUtils.cs" />
-    <Compile Include="Utils\StringValueAttributeUtils.cs" />
+    <Compile Include="Utils\StringValueAttribute.cs" />
+    <Compile Include="Utils\StringValueAttribute.Utils.cs" />
     <Compile Include="Utils\Units.cs" />
     <Compile Include="Utils\WeatherException.cs" />
     <Compile Include="Utils\WeatherUtils.Alerts.cs" />
@@ -283,22 +284,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FirebaseAuthentication.net">
-      <Version>3.6.0</Version>
+      <Version>3.7.1</Version>
     </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
-      <Version>4.0.5</Version>
+      <Version>4.0.6</Version>
     </PackageReference>
     <PackageReference Include="FirebaseStorage.net">
       <Version>1.0.3</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Firestore.v1">
-      <Version>1.50.0.2102</Version>
+      <Version>1.51.0.2276</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>4.1.0</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>4.1.0</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.HashCode">
       <Version>1.1.1</Version>
@@ -306,14 +307,11 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.12</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Parsers">
-      <Version>6.1.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.1.1</Version>
+      <Version>7.0.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
+      <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="NodaTime">
       <Version>3.0.5</Version>
@@ -328,7 +326,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
-      <Version>5.0.1</Version>
+      <Version>5.0.2</Version>
     </PackageReference>
     <PackageReference Include="Utf8Json">
       <Version>1.3.7</Version>
