--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -158,6 +158,8 @@
     <Compile Include="HERE\HEREWeatherProvider.cs" />
     <Compile Include="HERE\NWSAlerts.cs" />
     <Compile Include="HERE\Weather.cs" />
+    <Compile Include="HERE\WeatherAlerts.cs" />
+    <Compile Include="HERE\WeatherData.cs" />
     <Compile Include="Icons\IWeatherIconsProvider.cs" />
     <Compile Include="Icons\WeatherIconicProvider.cs" />
     <Compile Include="Icons\WeatherIconProvider.cs" />
@@ -181,9 +183,12 @@
     <Compile Include="MeteoFrance\CurrentsRootobject.cs" />
     <Compile Include="MeteoFrance\ForecastRootobject.cs" />
     <Compile Include="MeteoFrance\MeteoFranceProvider.cs" />
+    <Compile Include="MeteoFrance\WeatherAlerts.cs" />
+    <Compile Include="MeteoFrance\WeatherData.cs" />
     <Compile Include="Metno\Astrodata.cs" />
     <Compile Include="Metno\MetnoWeatherProvider.cs" />
     <Compile Include="Metno\Weather.cs" />
+    <Compile Include="Metno\WeatherData.cs" />
     <Compile Include="NWS\Alert.cs" />
     <Compile Include="NWS\Forecast.cs" />
     <Compile Include="NWS\HourlyForecastResponse.cs" />
@@ -191,9 +196,13 @@
     <Compile Include="NWS\NWSWeatherProvider.cs" />
     <Compile Include="NWS\PeriodsItem.cs" />
     <Compile Include="NWS\SolCalcAstroProvider.cs" />
-    <Compile Include="OpenWeather\OneCallResponse.cs" />
+    <Compile Include="NWS\WeatherAlerts.cs" />
+    <Compile Include="NWS\WeatherData.cs" />
+    <Compile Include="OpenWeather\OneCall\OneCallResponse.cs" />
+    <Compile Include="OpenWeather\OneCall\WeatherData.cs" />
     <Compile Include="OpenWeather\OpenWeatherMapProvider.cs" />
     <Compile Include="OpenWeather\Weather.cs" />
+    <Compile Include="OpenWeather\WeatherData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteConfig\RemoteConfig.cs" />
     <Compile Include="RemoteConfig\Utf8JsonGen\Utf8JsonGenerated.cs" />
@@ -275,8 +284,6 @@
     <Compile Include="WeatherData\IWeatherAlertProvider.cs" />
     <Compile Include="WeatherData\IWeatherErrorListener.cs" />
     <Compile Include="WeatherData\IWeatherProviderImpl.cs" />
-    <Compile Include="WeatherData\Weather.cs" />
-    <Compile Include="WeatherData\WeatherAlert.cs" />
     <Compile Include="WeatherData\WeatherBackground.cs" />
     <Compile Include="WeatherData\WeatherDataLoader.cs" />
     <Compile Include="Icons\WeatherIcons.cs" />
@@ -286,6 +293,7 @@
     <Compile Include="WeatherData\WeatherResult.cs" />
     <Compile Include="WeatherUnlocked\Current.cs" />
     <Compile Include="WeatherUnlocked\Forecast.cs" />
+    <Compile Include="WeatherUnlocked\WeatherData.cs" />
     <Compile Include="WeatherUnlocked\WeatherUnlockedProvider.cs" />
     <EmbeddedResource Include="Properties\SimpleWeather.Shared.rd.xml" />
   </ItemGroup>
