OpenWeatherMapProvider: use one-call API if user has their own personal key
* Update OneCall API data model (now includes alerts, uvi, and moonphase)

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -201,6 +201,8 @@
     <Compile Include="NWS\WeatherAlerts.cs" />
     <Compile Include="NWS\WeatherData.cs" />
     <Compile Include="OpenWeather\OneCall\OneCallResponse.cs" />
+    <Compile Include="OpenWeather\OneCall\OWMOneCallWeatherProvider.cs" />
+    <Compile Include="OpenWeather\OneCall\WeatherAlerts.cs" />
     <Compile Include="OpenWeather\OneCall\WeatherData.cs" />
     <Compile Include="OpenWeather\OpenWeatherMapProvider.cs" />
     <Compile Include="OpenWeather\Weather.cs" />
