--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -200,6 +200,7 @@
     <Compile Include="NWS\SolCalcAstroProvider.cs" />
     <Compile Include="NWS\WeatherAlerts.cs" />
     <Compile Include="NWS\WeatherData.cs" />
+    <Compile Include="OpenWeather\OneCall\AirPollutionResponse.cs" />
     <Compile Include="OpenWeather\OneCall\OneCallResponse.cs" />
     <Compile Include="OpenWeather\OneCall\OWMOneCallWeatherProvider.cs" />
     <Compile Include="OpenWeather\OneCall\WeatherAlerts.cs" />
