OWM: convert index to EPA scale to match our implementation

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Utf8JsonGen\EnumResolver.cs" />
     <Compile Include="Utf8JsonGen\Utf8JsonGenerated.cs" />
     <Compile Include="Utf8JsonGen\Utf8JsonResolver.cs" />
+    <Compile Include="Utils\AirQualityUtils.cs" />
     <Compile Include="Utils\AnalyticsLogger.cs" />
     <Compile Include="Utils\AppCenterLoggingTree.cs" />
     <Compile Include="Utils\AsyncTask.cs" />
