--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -280,9 +280,13 @@
     <Compile Include="UWP\WeatherData\Images\ImageDataHelperImpl.cs" />
     <Compile Include="UWP\WeatherData\WeatherProviderImpl.cs" />
     <Compile Include="ComponentModel\IViewModel.cs" />
+    <Compile Include="WeatherApi\ForecastRootobject.cs" />
     <Compile Include="WeatherApi\LocationData.cs" />
     <Compile Include="WeatherApi\LocationItem.cs" />
+    <Compile Include="WeatherApi\WeatherAlerts.cs" />
+    <Compile Include="WeatherApi\WeatherApiProvider.cs" />
     <Compile Include="WeatherApi\WeatherApiLocationProvider.cs" />
+    <Compile Include="WeatherApi\WeatherData.cs" />
     <Compile Include="WeatherData\IAirQualityProvider.cs" />
     <Compile Include="WeatherData\IAstroDataProvider.cs" />
     <Compile Include="WeatherData\Images\ImageDataDatabase.cs" />
