--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -631,7 +631,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)KeyCheck.exe" "$(SolutionDir)SimpleWeather.Shared\Keys\AppCenterKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\AQICNKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\BingMapsKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\FirebaseConfig.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\HEREWeatherKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\OWMKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\TimeZoneAPI.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\WeatherApiKey.cs" "$(SolutionDir)SimpleWeather.Shared\Keys\WUnlockedKey.cs"
+    <PreBuildEvent>"$(SolutionDir)KeyCheck.exe" "$(SolutionDir)SimpleWeather.Shared\Keys"
 
 if errorlevel 1 goto Error
 
