ImageDataDatabase: add extension method to retrieve random item from collection

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Utils\AnalyticsLogger.cs" />
     <Compile Include="Utils\AppCenterLoggingTree.cs" />
     <Compile Include="Utils\AsyncTask.cs" />
+    <Compile Include="Utils\CollectionUtils.cs" />
     <Compile Include="Utils\ColorUtils.cs" />
     <Compile Include="Utils\CommonActions.cs" />
     <Compile Include="Utils\ConversionMethods.cs" />
