--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>SimpleWeather.UWP</RootNamespace>
     <AssemblyName>SimpleWeather.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
+    <LangVersion>9.0</LangVersion>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
