--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Utf8JsonGen\Utf8JsonResolver.cs" />
     <Compile Include="Utils\AirQualityUtils.cs" />
     <Compile Include="Utils\AnalyticsLogger.cs" />
+    <Compile Include="Utils\APIRequestUtils.cs" />
     <Compile Include="Utils\AppCenterLoggingTree.cs" />
     <Compile Include="Utils\AsyncTask.cs" />
     <Compile Include="Utils\CollectionUtils.cs" />
@@ -273,6 +274,7 @@
     <Compile Include="UWP\Icons\WeatherIconProvider.cs" />
     <Compile Include="UWP\Icons\WeatherIconsManager.cs" />
     <Compile Include="UWP\RemoteConfig\RemoteConfig.cs" />
+    <Compile Include="UWP\Utils\APIRequestUtils.cs" />
     <Compile Include="UWP\Utils\DispatcherExtensions.cs" />
     <Compile Include="UWP\Utils\FeatureSettings.cs" />
     <Compile Include="UWP\Utils\FileUtils.cs" />
